web-infras/parser/tests/fixtures/babel/es2017/async-arrow/parenthesized-binding-member-expression/output.txt
[SyntaxError]: Invalid parenthesized assignment pattern. (1,10)
1|async ([(a.b) = []] = []) => {}
 |        ^
